--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,6 +64,7 @@ header{
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    flex-basis: 100%;
 }
 
 .ficha1, .ficha2{
@@ -82,13 +83,28 @@ header{
     border-radius: 25px;
     text-align: center;
     padding-bottom: 10px;
-    margin: 10px;
+    margin: 5px;
 }
 
 #heroe1 img, #heroe2 img{
-    width: 290px;
+    width: 280px;
     border-radius: 25px;
-    margin: 5px;
+    margin: 10px;
+    border: 3px solid white;
+}
+
+
+
+@keyframes animate2{
+    0%{
+        background-position: 0 0;
+    }
+    50%{
+        background-position: 400% 0;
+    }
+    100%{
+        background-position: 0 0;
+    }
 }
 
 .vs img{
@@ -154,7 +170,6 @@ article h3{
 article p{
     font-family: 'Poppins', sans-serif;
     font-size: 15px;
-    text-align: justify;
 }
 
 a{
@@ -167,7 +182,7 @@ a{
 }
 
 .acerca{
-    flex-basis: 1000px;
+    flex-basis: 800px;
 }
 
 /*----CONTACTO----*/
